--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
@@ -96,10 +96,40 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (IP addr in 10.0.16.0/20, 10.0.32.0/19, 10.0.64.0/18, 10.0.128.0/17) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
     name: policy-3
+    namespace: default
+spec:
+    egress:
+        - to:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector: {}
+            - ipBlock:
+                cidr: 0.0.0.0/0
+    podSelector:
+        matchExpressions:
+            - key: VMs_within_IPs__10.0.0.0-16
+              operator: Exists
+            - key: VMs_within_IPs__10.0.0.0-20
+              operator: DoesNotExist
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (IP addr in 10.0.16.0/20, 10.0.32.0/19, 10.0.64.0/18, 10.0.128.0/17) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        nsx-id: "1007"
+    creationTimestamp: null
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -123,12 +153,18 @@ metadata:
         description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     ingress:
         - from:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__10.0.0.0-16
                       operator: Exists
@@ -145,7 +181,7 @@ metadata:
         description: 'src: (VMs within IPs 172.16.10.10/16) dst: (group != real-group) conn: All Connections'
         nsx-id: "2200"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     egress:
@@ -174,7 +210,7 @@ metadata:
         description: 'src: (VMs within IPs 172.16.10.10/16) dst: (IP addr is external) conn: All Connections'
         nsx-id: "2200"
     creationTimestamp: null
-    name: policy-6
+    name: policy-7
     namespace: default
 spec:
     egress:
@@ -465,7 +501,7 @@ metadata:
         description: 'src: (IP addr in 172.16.10.10/16) dst: (group != real-group) conn: All Connections'
         nsx-id: "2200"
     creationTimestamp: null
-    name: policy-7
+    name: policy-8
     namespace: default
 spec:
     ingress:
@@ -516,7 +552,7 @@ metadata:
         description: 'src: (VMs within IPs 172.16.10.10/16) dst: (group != real-group) conn: All Connections'
         nsx-id: "2200"
     creationTimestamp: null
-    name: policy-8
+    name: policy-9
     namespace: default
 spec:
     ingress:
@@ -545,7 +581,7 @@ metadata:
         description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-9
+    name: policy-10
     namespace: default
 spec:
     egress:
@@ -573,7 +609,7 @@ metadata:
         description: 'src: (IP addr in 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-10
+    name: policy-11
     namespace: default
 spec:
     ingress:
@@ -649,7 +685,7 @@ metadata:
         description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-11
+    name: policy-12
     namespace: default
 spec:
     ingress:
@@ -675,7 +711,7 @@ metadata:
         description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
-    name: policy-12
+    name: policy-13
     namespace: default
 spec:
     egress:
@@ -708,7 +744,7 @@ metadata:
         description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
-    name: policy-13
+    name: policy-14
     namespace: default
 spec:
     ingress:
